--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/preset-env": "^7.22.9",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
@@ -19,6 +21,9 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/system": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
